--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -25,7 +25,7 @@
 }
 \makeatother
 
-\usepackage[nogroupskip, acronym]{glossaries}	% for acronyms
+\usepackage[nogroupskip,acronym,nopostdot]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}			% no title for glossary
 \newcommand*{\glossfirstformat}[1]{\textit{#1}}	% use italics for first occurence
 \renewcommand{\glsdisplayfirst}[4]{\glossfirstformat{#1#4}}
