--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -2,6 +2,8 @@
 % Can be replaced by \appendix
 
 \begin{appendices}
+\setcounter{table}{0}
+\renewcommand{\thetable}{A\arabic{table}}
 %\titleformat{\chapter}{\large\bfseries}{\appendixname~\thesection .}{0.5em}{}
 %\titleformat{\chapter}{\normalfont\LARGE\bfseries}{\appendixname~\thechapter}{20pt}{}{}
 \renewcommand{\thesection}{\Roman{section}}
