--- a/thesis/tex/conclusion.tex
+++ b/thesis/tex/conclusion.tex
@@ -9,4 +9,4 @@ Finally, the third chapter described the implemented application itself. The str
 
 The application could be further developed to support different \gls{EEG} devices and more \gls{feature extraction} methods to find the best combination of different \gls{feature extraction} methods. Using multiple methods at the same time clearly improves the performance of a \gls{BCI}, but on the other hand it is computationally more expensive. But as the technology improves, this becomes less relevant.
 
-[TODO: after measuring the performance of my application, add a paragraph about the that somewhere]
+Although the application was not thoroughly tested, it already shows very good results compared to the previous \glspl{BCI}. Current results show that the application is quite stable with \gls{target} detection time of 2.61 seconds while the \gls{target} detection times of the previous \glspl{BCI} are reported to be 3 seconds or more. Thus it is important to test and improve the application further to find settings that give even better results and maybe some day this \gls{BCI} will have good enough performance to be adapted for controlling real world devices.
