--- a/thesis/tex/introduction.tex
+++ b/thesis/tex/introduction.tex
@@ -3,7 +3,7 @@
 
 Over the last decade the question how to implement direct communication channel between the brain and an external device has received much attention~\cite{mec, cca_lin, MPCC, sc, LRT, LASSO}. This communication channel works by translating recorded brain activity into commands to control the device or the other way round---by sending signals into the brain. Sending signals into the brain requires a surgery to implant the device that can send those signals. This approach can be used for example to repair damaged vision or hearing.
 
-Measuring the brain activity, however, can be done without implanting anything into the brain and therefore it is easier and less expensive than invasive methods. This approach can be used for example to operate a wheelchair or for typing without having to press buttons. Nowadays the brain activity can be measured using non-invasive and inexpensive devices and thus many people could benefit from an application that efficiently implements this new communication channel between the brain and an external device.
+Measuring the brain activity, however, can be done without implanting devices into the brain and therefore it is easier and less expensive than invasive methods. This approach can be used for example to operate a wheelchair or for typing without having to press buttons. Nowadays the brain activity can be measured using non-invasive and inexpensive devices and thus many people could benefit from an application that efficiently implements this new communication channel between the brain and an external device.
 
 This thesis describes an application that uses an \gls{EEG} device called Emotiv EPOC to measure brain activity and translates the recorded signal into commands to control a robot. The application was written as a practical part of this thesis and the focus was on implementing an inexpensive application. Compared to existing applications, the practical part of this thesis combines two widely used methods called \gls{PSDA}~\cite{psda} and \gls{CCA}~\cite{cca_lin} for extracting information from brain recording in a way which to the best of the author's knowledge has not been done before.
 
