--- a/thesis/tex/glossary.tex
+++ b/thesis/tex/glossary.tex
@@ -49,7 +49,7 @@
 }
 \newglossaryentry{membrane potential}{
 	name = membrane potential,
-	description = {-- difference between the electric potentials of the interior and the exterior of a cell.}
+	description = {-- difference in electric potential between the inside of the neuron and the extracellular fluid around the neuron.}
 }
 \newglossaryentry{resting state}{
 	name = resting state,
