--- a/thesis/tex/appendices.tex
+++ b/thesis/tex/appendices.tex
@@ -43,6 +43,11 @@ ID		& (Hz)		& in extraction	& (pixel)	& (pixel)	& 		& 		 		& 		 & (pixel)	&(pixe
 		\label{tab:targets}
 	\end{table}
 \end{landscape}
+\newpage
+\section{Code of the application}
+\label{sec:code}
+
+The application written as a practical part of this thesis is open-source and the code is accessible from Github repository\footnote{https://github.com/kahvel/VEP-BCI}. The detailed description of the application is in chapter~\ref{sec:SSVEP_BCI} of this thesis. For the most up to date instructions on which libraries are required, how the repository is structured and how to start using the application, see \texttt{README.md} file in the repository.
 %\section{List of figures}
 %\makeatletter
 %\@starttoc{lof}% Print List of Figures
