--- a/thesis/tex/abstract.tex
+++ b/thesis/tex/abstract.tex
@@ -14,7 +14,7 @@ This thesis describes an \acrshort{SSVEP}-based \acrshort{BCI} implemented as a 
 
 \section*{Lühikokkuvõte}
 
-Antud töö kirjeldab visuaalse stiimuliga esilekutsutud potentsiaalidel põhinevat aju ning arvuti vahelist liidest (AAL), mis loodi antud töö praktilise osana. AALi saab kasutada aju ja seadme vahelise otsese suhtluskanali loomiseks, mis tähendab, et seadmega suhtlemiseks pole vaja nuppe vajutada, piisab vaid visuaalsete stiimulite vaatamisest. Efektiivne AAL võimaldaks raske puudega isikutel näiteks elektroonilist ratastooli juhtida. Antud töö osana loodud AAL kasutab tuntud kanoonilise korrelatsiooni- ja võimsusspektri analüüsi meetodeid ning uuendusena kombineerib need kaks meetodit üheks teineteist täiendavaks meetodiks. Kahe meetodi kombinatsioon muudab AALi täpsemaks. AALi testiti antud töös vaid pealiskaudselt ning tulemused on järgnevad: ühe käsu edastamise aeg $2.61\pm 0.28$ s, täpsus $85.81\pm 6.39$ \% ning informatsiooni edastamise kiirus $27.73\pm 5.11$ bits/min. Antud AAL on avatud lähtekoodiga, kirjutatud Python 2.7 programmeerimiskeeles, sisaldab graafilist kasutajaliidest ning kasutab aju tegevuse mõõtmiseks elektroensefalograafia (EEG) seadet Emotiv EPOC. AALi kasutamiseks on vaja ainult arvutit ja Emotiv EPOC seadet. Koodi muutes on võimalik kasutada ka teisi EEG seadmeid. 
+Antud töö kirjeldab visuaalse stiimuliga esilekutsutud potentsiaalidel põhinevat aju ning arvuti vahelist liidest (AAL), mis loodi antud töö praktilise osana. AALi saab kasutada aju ja seadme vahelise otsese suhtluskanali loomiseks, mis tähendab, et seadmega suhtlemiseks pole vaja nuppe vajutada, piisab vaid visuaalsete stiimulite vaatamisest. Efektiivne AAL võimaldaks raske puudega isikutel näiteks elektroonilist ratastooli juhtida. Antud töö osana loodud AAL kasutab tuntud kanoonilise korrelatsiooni- ja võimsusspektri analüüsi meetodeid ning uuendusena kombineerib need kaks meetodit üheks teineteist täiendavaks meetodiks. Kahe meetodi kombinatsioon muudab AALi täpsemaks. AALi testiti antud töös vaid pealiskaudselt ning tulemused on järgnevad: ühe käsu edastamise aeg $2.61\pm 0.28$ s, täpsus $85.81\pm 6.39$ \% ning informatsiooni edastamise kiirus $27.73\pm 5.11$ bitt/min. Antud AAL on avatud lähtekoodiga, kirjutatud Python 2.7 programmeerimiskeeles, sisaldab graafilist kasutajaliidest ning kasutab aju tegevuse mõõtmiseks elektroensefalograafia (EEG) seadet Emotiv EPOC. AALi kasutamiseks on vaja ainult arvutit ja Emotiv EPOC seadet. Koodi muutes on võimalik kasutada ka teisi EEG seadmeid. 
 
 \section*{Võtmesõnad}
 
